add show selected data

--- a/public/game/style.css
+++ b/public/game/style.css
@@ -90,11 +90,22 @@ body {
     display: flex;
     margin-right: 8%;
 }
-.date-control:last-of-type {
-    margin-right: 0;
+.date-control:last-child {
+    margin: 0 0 0 auto;
 }
 .date-control label {
     margin: -3px 4px 0 0;
+}
+#date-selected {
+    color: #57637d;
+    max-width: 200px;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: max-width 1s ease-in 0.3s;
+}
+#date-selected.empty {
+    max-width: 0;
+    transition: max-width 0.4s ease-out;
 }
 #date {
     display: flex;
