--- a/public/game/style.css
+++ b/public/game/style.css
@@ -62,12 +62,12 @@ body {
 }
 .textarea {
     background-color: #f4f4f4;
-    transition: background-color 0.4s ease-in 0.1s, box-shadow 0.4s ease-in 0.1s;
+    transition: background-color 0.4s ease-in 0.1s, box-shadow 0.4s ease-in 0.1s, min-height 0.4s;
 }
 .success {
     box-shadow: 0 0 6pt 1px rgba(63, 255, 0, 0.72);
     background-color: #f8fffc;
-    transition: background-color 0.15s ease-out, box-shadow 0.15s ease-out;
+    transition: background-color 0.15s ease-out, box-shadow 0.15s ease-out, min-height 0.4s;
 }
 
 #main {
@@ -142,7 +142,6 @@ body {
     padding: 8px 12px;
     border: 1px solid #c7c7c7;
     border-radius: 4px;
-    transition: min-height 0.4s;
 }
 #note:empty:not(:focus):before {
     color: #9299a5;
