--- a/pwa/scss/_List.scss
+++ b/pwa/scss/_List.scss
@@ -1,5 +1,14 @@
 .list {
     display: flex;
     flex-direction: column;
-    padding: 60px 40px 0;
+    padding: 0 12px 0;
+
+    &-empty {
+        p {
+            text-align: center;
+            color: $text-color3;
+            font-size: 30px;
+            padding-top: 40px;
+        }
+    }
 }
