--- a/pwa/scss/_Note.scss
+++ b/pwa/scss/_Note.scss
@@ -2,20 +2,28 @@
     width: 100%;
     margin-bottom: 8px;
     background: linear-gradient(45deg, #cdcdcd, #ececec 7%, #f7f7f7 75%, #e9e9e9);
-    border: 0.5px solid #d3d3d3;
+    border: 0.5px solid $border-color1;
     border-radius: 5px;
-    max-height: 600px;
+    max-height: 0;
+    overflow: hidden;
 
+    &:last-child {
+        margin-top: 4px;
+    }
     &:last-child {
         margin-bottom: 0;
     }
+    &.created {
+        max-height: 35px;
+        transition: max-height 0.2s;
+    }
     &:not(.sliding) {
-        transition: margin-left 0.4s ease;
+        transition: max-height 0.2s, margin-left 0.4s;
     }
     &.deleted {
         max-height: 0;
         margin-bottom: 0;
-        transition: max-height 2s ease -1.2s, margin-bottom 0.05s ease 0.3s, margin-left 0.8s, opacity 1s;
+        transition: max-height 0.4s, margin-bottom 0.05s ease 0.2s, margin-left 0.7s, opacity 0.6s;
         overflow: hidden;
     }
 
@@ -24,7 +32,10 @@
     }
 
     &-text {
-        color: $text-color;
+        color: $text-color2;
         user-select: none;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
 }
