--- a/pwa/scss/index.scss
+++ b/pwa/scss/index.scss
@@ -1,5 +1,12 @@
-$text-color: #2e3951;
+$text-color1: #25304b;
+$text-color2: #303c56;
+$text-color3: #7e8299;
+$border-color1: #d3d3d3;
+$submit-color: #207d44;
 
 @import 'reset';
+@import 'App';
 @import 'List';
 @import 'Note';
+@import 'AddNote';
+@import 'Controls';
