--- a/pwa/template.ejs
+++ b/pwa/template.ejs
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div id="root"></div>
