--- a/pwa/src/scss/_App.scss
+++ b/pwa/src/scss/_App.scss
@@ -1,13 +1,6 @@
-#root {
+.app {
+    height: 100%;
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
-    padding-top: 8px;
-
-    .list {
-        flex-grow: 1;
-    }
-    .add-note {
-        flex-shrink: 0;
-    }
 }
