--- a/pwa/src/scss/_AddNote.scss
+++ b/pwa/src/scss/_AddNote.scss
@@ -1,22 +1,20 @@
 .add-note {
     max-height: 72px;
-    transition: max-height 0.4s, opacity 0.4s;
-    overflow: hidden;
+    transition: max-height 0.29s, opacity 0.15s ease-out;
 
     &.hidden {
         max-height: 0;
         opacity: 0;
-        transition: max-height 0.3s ease-out, opacity 0.5s;
     }
 
     &-content {
         padding: 0 8px 6px;
         display: flex;
-        align-items: center;
-        margin: 6px;
+        align-items: flex-end;
+        margin: 6px 6px 0;
 
         input {
-            width: 100%;
+            flex-grow: 1;
             border: 1px solid $border-color1;
             border-radius: 22px;
             font-size: 20px;
@@ -39,23 +37,29 @@
     }
 
     &-submit {
-        margin: 0 2px 0 12px;
-        min-width: 34px;
+        cursor: pointer;
+        max-width: 34px;
+        margin-left: 12px;
+        transition: margin-left 0.15s ease 0.05s, max-width 0.3s, opacity 0.4s;
         outline: 0;
 
         svg {
-            color: $submit-color;
-            transition: color 0.2s ease-out;
-            font-size: 35px;
+            color: #37cc71;
+            font-size: 36px;
         }
+    }
 
-        &:not(.disabled) {
-            cursor: pointer;
+    &.disabled &-submit {
+        cursor: auto;
+        max-width: 0;
+        margin: 0;
+        opacity: 0;
+        transition: margin 0.5s, max-width 0.5s, opacity 0.3s;
 
-            svg {
-                color: lighten($submit-color, 20);
-                font-size: 36px;
-            }
+        svg {
+            height: 0;
+            width: 0;
+            transition: height 0.3s, width 0.4s;
         }
     }
 }
