--- a/pwa/src/scss/_Controls.scss
+++ b/pwa/src/scss/_Controls.scss
@@ -3,6 +3,14 @@
     justify-content: space-around;
     padding: 10px 0 20px;
     background: linear-gradient(to bottom, #ffffff, #f5f5f5 40%, #e7e7e7 90%);
+    max-height: 72px;
+    transition: max-height 0.3s, opacity 0.2s ease-out;
+
+    &.hidden {
+        max-height: 0;
+        opacity: 0;
+        transition: max-height 0.1s, opacity 0.08s;
+    }
 
     &-control {
         display: flex;
