--- a/pwa/src/scss/_List.scss
+++ b/pwa/src/scss/_List.scss
@@ -1,7 +1,11 @@
 .list {
+    overflow-x: hidden;
+    overflow-y: auto;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
-    padding: 0 12px 0;
+    justify-content: flex-start;
+    padding: 8px 12px;
 
     &-empty {
         p {
