--- a/pwa/src/scss/_Note.scss
+++ b/pwa/src/scss/_Note.scss
@@ -4,6 +4,7 @@
     background: linear-gradient(45deg, #cdcdcd, #ececec 7%, #f7f7f7 75%, #e9e9e9);
     border: 0.5px solid $border-color1;
     border-radius: 5px;
+    min-height: 0;
     max-height: 0;
     overflow: hidden;
 
@@ -11,21 +12,22 @@
         margin-bottom: 0;
     }
     &.created {
+        min-height: 35px;
         max-height: 35px;
-        transition: max-height 0.2s;
     }
     &:not(.sliding) {
-        transition: max-height 0.2s, margin-left 0.4s;
+        transition: max-height 0.2s, min-height 0.2s, margin-left 0.4s;
     }
     &.deleted {
+        min-height: 0;
         max-height: 0;
         margin-bottom: 0;
-        transition: max-height 0.4s, margin-bottom 0.05s ease 0.2s, margin-left 0.7s, opacity 0.6s;
+        transition: max-height 0.3s, min-height 0.3s, margin-bottom 0.25s ease 0.05s, margin-left 0.4s, opacity 0.4s;
         overflow: hidden;
     }
 
     &-content {
-        margin: 8px 16px;
+        margin: 8px 4px 8px 16px;
     }
 
     &-text {
