--- a/pwa/src/scss/_Controls.scss
+++ b/pwa/src/scss/_Controls.scss
@@ -1,10 +1,12 @@
 .controls {
     display: flex;
     justify-content: space-around;
-    padding: 10px 0 20px;
-    background: linear-gradient(to bottom, #ffffff, #f5f5f5 40%, #e7e7e7 90%);
+    padding: 4px 0 10px;
+    background: linear-gradient(to bottom, #f6f6f6, #e7e7e7 40%);
+    box-shadow: 0 -10px 10px 0 #f6f6f6;
     max-height: 72px;
     transition: max-height 0.3s, opacity 0.2s ease-out;
+    z-index: 1;
 
     &.hidden {
         max-height: 0;
