basic SW – client communication

--- a/pwa/src/scss/_AddNote.scss
+++ b/pwa/src/scss/_AddNote.scss
@@ -18,7 +18,7 @@
         align-items: flex-end;
 
         input {
-            flex-grow: 1;
+            width: 100%;
             border: 1px solid $border-color1;
             border-radius: 22px;
             font-size: 20px;
