--- a/pwa/src/scss/_Controls.scss
+++ b/pwa/src/scss/_Controls.scss
@@ -9,6 +9,7 @@
     z-index: 1;
 
     &.hidden {
+        overflow: hidden;
         max-height: 0;
         opacity: 0;
         transition: max-height 0.1s, opacity 0.08s;
