--- a/pwa/src/scss/_AddNote.scss
+++ b/pwa/src/scss/_AddNote.scss
@@ -11,11 +11,16 @@
         opacity: 0;
         padding-top: 0;
     }
+    &.hidden &-content {
+        max-height: 0;
+    }
 
     &-content {
         padding: 0 8px 2px;
         display: flex;
         align-items: flex-end;
+        max-height: 48px;
+        transition: max-height 0.3s;
 
         input {
             width: 100%;
