--- a/pwa/src/scss/_Controls.scss
+++ b/pwa/src/scss/_Controls.scss
@@ -3,7 +3,7 @@
     justify-content: space-around;
     padding: 4px 0 10px;
     background: linear-gradient(to bottom, #f6f6f6, #e7e7e7 40%);
-    box-shadow: 0 -10px 10px 0 #f6f6f6;
+    box-shadow: 0 4px 5px 1em #f6f6f6;
     max-height: 72px;
     transition: max-height 0.3s, opacity 0.2s ease-out;
     z-index: 1;
