--- a/pwa/src/scss/_List.scss
+++ b/pwa/src/scss/_List.scss
@@ -7,12 +7,22 @@
     justify-content: flex-start;
     padding: 8px 12px;
 
-    &-empty {
+    &-empty,
+    &-date-delimiter {
+        text-align: center;
+        color: $text-color3;
+    }
+    &-empty p {
+        font-size: 30px;
+        padding-top: 40px;
+    }
+    &-date-delimiter {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
         p {
-            text-align: center;
-            color: $text-color3;
-            font-size: 30px;
-            padding-top: 40px;
+            font-size: 18px;
         }
     }
 }
