--- a/pwa/src/scss/_List.scss
+++ b/pwa/src/scss/_List.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding: 8px 12px;
+    padding: 8px 22px 8px 12px;
 
     &-empty,
     &-date-delimiter {
