daily: change Slidable component Y-axis direction

--- a/pwa/daily/src/scss/_View.scss
+++ b/pwa/daily/src/scss/_View.scss
@@ -43,7 +43,7 @@ $slidable-transition-common: opacity 0.2s, padding 0.2s;
                 }
                 .slidable.y {
                     width: 100%;
-                    flex-direction: column;
+                    flex-direction: column-reverse;
                 }
                 .slidable.x.is-sliding {
                     padding: 3% 0;
