--- a/pwa/daily/src/scss/_View.scss
+++ b/pwa/daily/src/scss/_View.scss
@@ -1,4 +1,5 @@
-$slidable-transition-common: opacity 0.2s, padding 0.2s;
+$slidable-transition-common: opacity 0.15s, padding 0.15s;
+$controls-text-color: #353638;
 
 .view-controller {
     flex-grow: 1;
@@ -8,7 +9,7 @@ $slidable-transition-common: opacity 0.2s, padding 0.2s;
 
     .view-wrapper {
         min-width: 100vw;
-        opacity: 0.2;
+        opacity: 0;
         transition: opacity 0.3s ease 0.1s;
 
         &:first-child {
@@ -17,12 +18,69 @@ $slidable-transition-common: opacity 0.2s, padding 0.2s;
 
         .view {
             height: 100%;
+            padding: 0 2%;
             display: flex;
 
             .content {
                 width: 100%;
+                position: relative;
+
+                .controls {
+                    width: 100%;
+                    z-index: 1;
+                    position: absolute;
+                    padding-top: 1px;
+                    display: flex;
+                    justify-content: space-between;
+
+                    .control {
+                        display: flex;
+
+                        p {
+                            color: $controls-text-color;
+                            font-size: 14px;
+                        }
+
+                        svg {
+                            color: lighten($controls-text-color, 20);
+                        }
+                    }
+                    .control.reset {
+                        flex-grow: 1;
+                        justify-content: flex-end;
+                        margin-right: 4px;
+
+                        svg {
+                            max-width: 14px;
+                            max-height: 14px;
+                            margin: 2px 0 0 4px;
+                            animation-name: spin-back;
+                            animation-duration: 0.3s;
+                            animation-fill-mode: forwards;
+
+                            @keyframes spin-back {
+                                0%   { transform: rotate(270deg); width: 0; height: 0; margin: 2px -4px -2px 4px; }
+                                100% { transform: rotate(0deg); width: 14px; height: 14px; margin: 3px 0 0 4px; }
+                            }
+                        }
+                    }
+                    .control.hidden {
+                        opacity: 0.8;
+                    }
+                    .control.hidden.reset {
+                        svg {
+                            animation-name: spin-away;
+                            animation-duration: 0.3s;
+
+                            @keyframes spin-away {
+                                100% { opacity: 0.2; transform: rotate(270deg); width: 0; height: 0; margin: 2px -4px -2px 4px; }
+                            }
+                        }
+                    }
+                }
 
                 .slidable {
+                    margin-top: 20px;
                     display: inline-flex;
                     position: relative;
                     box-sizing: border-box;
@@ -30,13 +88,18 @@ $slidable-transition-common: opacity 0.2s, padding 0.2s;
 
                     .slidable-item {
                         flex-grow: 1;
+                        transition: opacity 0.5s;
+
+                        &:not(.current) {
+                            opacity: 0.5;
+                        }
                     }
                 }
                 .slidable:not(.is-sliding) {
-                    transition: $slidable-transition-common, padding 0.15s ease 0.05s, left 0.2s, top 0.2s;
+                    transition: $slidable-transition-common, left 0.2s, top 0.2s;
                 }
                 .slidable.is-sliding {
-                    opacity: 0.8;
+                    opacity: 0.7;
                 }
                 .slidable.x {
                     height: 100%;
@@ -46,10 +109,10 @@ $slidable-transition-common: opacity 0.2s, padding 0.2s;
                     flex-direction: column-reverse;
                 }
                 .slidable.x.is-sliding {
-                    padding: 3% 0;
+                    padding: 2% 0;
                 }
                 .slidable.y.is-sliding {
-                    padding: 0 3%;
+                    padding: 0 2%;
                 }
             }
         }
